--- a/src/main/resources/web.properties
+++ b/src/main/resources/web.properties
@@ -1,4 +1,4 @@
 sut=www.google.ru
 platformName=Android
-driver = http://EPM-TSTF:27089c78-fcf9-4373-8246-e1ea1a96233f@mobilecloud.epam.com:8080/wd/hub
+driver = http://127.0.0.1:4723/wd/hub
 
