--- a/src/main/resources/web.properties
+++ b/src/main/resources/web.properties
@@ -1,4 +1,5 @@
 sut=www.google.ru
 platformName=Android
 driver = http://127.0.0.1:4723/wd/hub
-
+device = ce031603a0a0cb1b0f
+chromedriver = src/main/resources/chromedriver.exe
