--- a/src/main/resources/native.properties
+++ b/src/main/resources/native.properties
@@ -1,7 +1,16 @@
-platformName = Android
-driver=http://127.0.0.1:4723/wd/hub
-device=ce031603a0a0cb1b0f
-appName =src/main/resources/EPAMTestApp.apk
+driver = http://EPM-TSTF:27089c78-fcf9-4373-8246-e1ea1a96233f@mobilecloud.epam.com:8080/wd/hub
 email = tanya.tarinskaya@gmail.com
 username = tanyatar
 password = 12345678
+token = 27089c78-fcf9-4373-8246-e1ea1a96233f
+#ios
+automationNameIos = XCUITest 
+bundleId = com.epam.EPAMTestApp.ii
+udidIOS = ec645b7fe329a5ee0b53bd3494ad2cd8963ec07a
+appNameIOS = src/main/resources/EPAMTestApp.ipa
+#android
+automationNameAndroid = UiAutomator2
+app_package=platkovsky.alexey.epamtestapp
+app_activity=platkovsky.alexey.epamtestapp.activities.LoginActivity
+udidAndroid = 802KPFX1550899
+appNameAndroid =src/main/resources/EPAMTestApp.apk
