--- a/src/main/resources/web.properties
+++ b/src/main/resources/web.properties
@@ -1,4 +1,7 @@
 sut=www.google.ru
-platformName=Android
 driver = http://EPM-TSTF:27089c78-fcf9-4373-8246-e1ea1a96233f@mobilecloud.epam.com:8080/wd/hub
+udidAndroid = 802KPFX1550899
+udidIOS = ec645b7fe329a5ee0b53bd3494ad2cd8963ec07a
+token = 27089c78-fcf9-4373-8246-e1ea1a96233f
+
 
