--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <testng.version>7.1.0</testng.version>
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
         <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
+        <rest-assured.version>3.2.0</rest-assured.version>
+        <commons-lang3.version>3.9</commons-lang3.version>
     </properties>
 
     <profiles>
@@ -59,6 +61,16 @@
             <artifactId>testng</artifactId>
             <version>6.14.3</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${rest-assured.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
         </dependency>
     </dependencies>
 
