--- a/src/main/resources/native.properties
+++ b/src/main/resources/native.properties
@@ -1,8 +1,9 @@
 driver = http://EPM-TSTF:27089c78-fcf9-4373-8246-e1ea1a96233f@mobilecloud.epam.com:8080/wd/hub
+token = 27089c78-fcf9-4373-8246-e1ea1a96233f
+#data for login in app
 email = tanya.tarinskaya@gmail.com
 username = tanyatar
 password = 12345678
-token = 27089c78-fcf9-4373-8246-e1ea1a96233f
 #ios
 automationNameIos = XCUITest 
 bundleId = com.epam.EPAMTestApp.ii
