--- a/src/main/resources/web.properties
+++ b/src/main/resources/web.properties
@@ -1,7 +1,10 @@
-sut=www.google.ru
 driver = http://EPM-TSTF:27089c78-fcf9-4373-8246-e1ea1a96233f@mobilecloud.epam.com:8080/wd/hub
-udidAndroid = 802KPFX1550899
-udidIOS = ec645b7fe329a5ee0b53bd3494ad2cd8963ec07a
 token = 27089c78-fcf9-4373-8246-e1ea1a96233f
+sut=www.google.ru
+#Android
+udidAndroid = 802KPFX1550899
+#IOS
+udidIOS = ec645b7fe329a5ee0b53bd3494ad2cd8963ec07a
+
 
 
